[Feature] Get command response