@@ -4,12 +4,11 @@ import com.ma.raymond.k8smanagerservice.models.VMConfigs;
 import com.ma.raymond.k8smanagerservice.models.httpObject.ResponseDTO;
 import com.ma.raymond.k8smanagerservice.utils.OSValidator;
 import com.ma.raymond.k8smanagerservice.utils.StreamGobbler;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.*;
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -17,10 +16,11 @@ import java.util.concurrent.Executors;
 
 @RestController("/")
 public class K8sManagerController {
+    Logger log = LoggerFactory.getLogger(K8sManagerController.class);
 
     @GetMapping("/getVMConfig")
     public ResponseDTO buildVM(@RequestParam("token") String token, @RequestParam("vmCode") String vmCode) {
-        System.out.println("buildVM");
+        log.info("getVMConfig");
         //token authen
 
         //user author
@@ -53,6 +53,7 @@ public class K8sManagerController {
 
     @PostMapping("/buildVM")
     public ResponseDTO buildVM(@RequestParam("token") String token, @RequestParam("vmCode") String vmCode, @RequestParam("dockerBuildString") String dockerBuildString, @RequestParam("k8sConfig") String k8sConfig) throws IOException, InterruptedException {
+        log.info("buildVM");
         //token authen
 
         //user author
@@ -75,17 +76,45 @@ public class K8sManagerController {
 //        Executors.newSingleThreadExecutor().submit(streamGobbler);
 //        int exitCode = process.waitFor();
 //        assert exitCode == 0;
-
+        StringBuilder sb=new StringBuilder();
         //For Linux
         if(OSValidator.isUnix()) {
-            Process process = Runtime.getRuntime().exec(String.format("kubectl apply -f k8sConfig.yaml", vmCode));
-            StreamGobbler streamGobbler =
-                    new StreamGobbler(process.getInputStream(), System.out::println);
-            Executors.newSingleThreadExecutor().submit(streamGobbler);
-            int exitCode = process.waitFor();
-            assert exitCode == 0;
+//            Process process = Runtime.getRuntime().exec(String.format("cd "+vmCode+" && kubectl apply -f k8sConfig.yaml", vmCode));
+            ProcessBuilder builder = new ProcessBuilder("bash", "-c","cd "+vmCode+" && kubectl apply -f k8sConfig.yaml");
+
+            builder.redirectErrorStream(true);
+            Process process = builder.start();
+            InputStream is = process.getInputStream();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+
+            String line = null;
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line);
+                sb.append(line);
+                sb.append('\n');
+            }
+
+//            StreamGobbler streamGobbler =
+//                    new StreamGobbler(process.getInputStream(), System.out::println);
+//            Executors.newSingleThreadExecutor().submit(streamGobbler);
+//            int exitCode = process.waitFor();
+//            assert exitCode == 0;
+        }else{
+            ProcessBuilder builder = new ProcessBuilder("cmd.exe","/c","cd C: && dir ");
+
+            builder.redirectErrorStream(true);
+            Process process = builder.start();
+            InputStream is = process.getInputStream();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(is));
+
+            String line = null;
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line);
+                sb.append(line);
+                sb.append('\n');
+            }
         }
-        return new ResponseDTO("", "VM Build successfully", "", "temp instance", "helpUrl", null);
+        return new ResponseDTO("", "VM Build successfully", "", "temp instance", "helpUrl", sb.toString());
     }
 
     @RequestMapping("/vmStatus")
